# HUAWEI_Router_Assistant

./: .gitignore  CLAUDE.md  README.md  TODO.md  compile_run.ps1  main.py  pyproject.toml  requirements.txt  run.ps1  status.xml  status_backup.xml  test.py
.github/: gen_release_notes.py
.github/workflows/: release.yaml
app/common/: RouterInfo.py  config.py  database.py  global_logger.py  notify.py  style_sheet.py
app/components/: backdrop.py  battery_card.py  battery_history_card.py  link_card.py  monitoring_status_card.py  month_statistics_card.py  traffic_statistics_card.py
app/config/: config.json
app/resource/: resource.qrc
app/resource/qss/dark/: battery_card.qss  battery_history_card.qss  home_interface.qss  link_card.qss  monitoring_status_card.qss  setting_interface.qss  traffic_statistics_card.qss
app/resource/qss/light/: battery_card.qss  battery_history_card.qss  home_interface.qss  monitoring_status_card.qss  traffic_statistics_card.qss
app/view/: battery_history_interface.py  gallery_interface.py  home_interface.py  main_window.py  monitoring_status_interface.py  setting_interface.py
