[project]
name = "HUAWEI_Router_Assistant"
version = "0.1.0"
description = "A simple program to display basic information of your HUAWEI Mobile Wifi 3 Pro"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs==15.0.1",
    "matplotlib==3.8.0",
    "notify-py",
    "PyQt5==5.15.10",
    "PyQt_Fluent_Widgets==0.9.8",
    "requests==2.31.0",
    "qasync",
]

[tool.uv]
constraint-dependencies = [
    "pyqt5-qt5==5.15.2",
]
